chore: fix dark mode css in docs

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -112,6 +112,10 @@
   --ifm-surface-alert-danger-subtle: #ffecec;
   --ifm-stroke-alert-danger-subtle: #f11f1f;
   --ifm-border-alert-danger-subtle: #ff4e4e;
+  --ifm-blockquote-color: #2d2D2D;
+  --ifm-blockquote-border-color: #424258;
+  --ifm-pagination-border: #ccc;
+
 
   /* Base Colors */
   --ifm-color-white: #ffffff;
@@ -485,6 +489,10 @@
   --ifm-surface-alert-danger-subtle: #670000;
   --ifm-stroke-alert-danger-subtle: #ff4e4e;
   --ifm-border-alert-danger-subtle: #ffb1b1;
+  --ifm-blockquote-color: #757D8D;
+  --ifm-blockquote-border-color:  #757D8D;
+  --ifm-pagination-border: #202124;
+
 
 
   /* Base Colors */
@@ -2433,6 +2441,11 @@ article .markdown > ol > li > code {
 }
 
 /* footer pagination styling */
+.pagination-nav__link {
+  border: 1px solid var(--ifm-pagination-border);
+}
+
+
 .pagination-nav__link--prev .pagination-nav__label::before {
   content: '';
   display: inline-block;
